--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,15 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
+    "target": "ES2020",
+    "useDefineForClassFields": true,
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "module": "ESNext",
+    "skipLibCheck": true,
+
     "baseUrl": "src",
     "paths": {
+      "src/*": ["*"],
       "app/*": ["app/*"],
       "entities/*": ["entities/*"],
       "features/*": ["features/*"],
